Added tests for personFinder and groupingMessage consumer

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
@@ -124,6 +124,8 @@
   <ItemGroup>
     <Compile Include="AbsenceRequestResolveTest.cs" />
     <Compile Include="BudgetGroupAllowanceSpecificationTest.cs" />
+    <Compile Include="Denormalizer\DenormalizeGroupingMessageConsumerTest.cs" />
+    <Compile Include="Denormalizer\DenormalizePersonFinderConsumerTest.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionConsumerTest.cs" />
     <Compile Include="Denormalizer\ProcessDenormalizeQueueResolveTest.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionResolveTest.cs" />
