--- a/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
+++ b/Teleopti.Ccc.WinCode/Teleopti.Ccc.WinCode.csproj
@@ -515,6 +515,7 @@
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDisplayDataExtractor.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDisplayRow.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDisplayRowColumnMapper.cs" />
+    <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsDisplayRowCreator.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsModel.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsPresenter.cs" />
     <Compile Include="Scheduling\AgentRestrictions\AgentRestrictionsTask.cs" />
