added some tests

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBusTest/Teleopti.Ccc.Sdk.ServiceBusTest.csproj
@@ -129,6 +129,8 @@
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionConsumerTest.cs" />
     <Compile Include="Denormalizer\ProcessDenormalizeQueueResolveTest.cs" />
     <Compile Include="Denormalizer\DenormalizeScheduleProjectionResolveTest.cs" />
+    <Compile Include="Denormalizer\UpdateGroupingReadModelTest.cs" />
+    <Compile Include="Denormalizer\UpdatePersonFinderReadModelTest.cs" />
     <Compile Include="Denormalizer\UpdateScheduleProjectionReadModelTest.cs" />
     <Compile Include="Forecast\ImportForecastsFileToSkillTest.cs" />
     <Compile Include="Forecast\ImportForecastsToSkillConsumerResolveTest.cs" />
