--- a/.hgignore
+++ b/.hgignore
@@ -58,3 +58,4 @@ Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/RtaWebService.log.1
 *.sln
 Database/Tools/Restore/output
 Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/SdkWebService.log.1
+Logs/SdkWebService.log.1
