removed dead files

--- a/AgentPortal/Teleopti.Ccc.AgentPortalCode/Teleopti.Ccc.AgentPortalCode.csproj
+++ b/AgentPortal/Teleopti.Ccc.AgentPortalCode/Teleopti.Ccc.AgentPortalCode.csproj
@@ -321,9 +321,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
