removing more unused files

--- a/AgentPortal/Teleopti.Ccc.AgentPortalCodeTest/Teleopti.Ccc.AgentPortalCodeTest.csproj
+++ b/AgentPortal/Teleopti.Ccc.AgentPortalCodeTest/Teleopti.Ccc.AgentPortalCodeTest.csproj
@@ -164,9 +164,7 @@
       <Link>CodeAnalysisDictionary.xml</Link>
     </CodeAnalysisDictionary>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
