--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -78,6 +78,9 @@
     </Compile>
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
+    <Compile Include="Data\DataFactory.cs" />
+    <Compile Include="Data\User\ContractScheduleWith2DaysOff.cs" />
+    <Compile Include="Data\User\UserContractSchedule.cs" />
     <Compile Include="PreferencesPeriodFeedbackStepDefinition.cs" />
     <Compile Include="Core\TestMethods.cs" />
     <Compile Include="Data\User\AgentWithoutAbsenceRequestsAccess.cs" />
@@ -227,7 +230,7 @@
     <Compile Include="Data\User\StudentAvailability.cs" />
     <Compile Include="Data\User\TwoExistingTextRequestChangedOnDifferentTimes.cs" />
     <Compile Include="Data\User\USCulture.cs" />
-    <Compile Include="Data\User\PersonAndSchedulePeriod.cs" />
+    <Compile Include="Data\User\PersonPeriod.cs" />
     <Compile Include="Data\User\Interfaces\IUserDataSetup.cs" />
     <Compile Include="Data\User\Interfaces\IUserSetup.cs" />
     <Compile Include="LicenseStepDefinitions.cs" />
