Second scenario green!

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -682,6 +682,7 @@
     <Compile Include="Scheduling\ScheduleDayAvailableForDayOffSpecification.cs" />
     <Compile Include="Scheduling\Rules\WorkTimeStartEndExtractor.cs" />
     <Compile Include="Scheduling\ScheduleMatrixListPeriodFinder.cs" />
+    <Compile Include="Scheduling\SchedulePeriodTargetDayOffCalculator.cs" />
     <Compile Include="Scheduling\SchedulePeriodTargetTimeTimeCalculator.cs" />
     <Compile Include="Scheduling\ScheduleService.cs" />
     <Compile Include="Scheduling\SchedulerSkillDayHelper.cs" />
