--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Domain\IPreferenceRestrictionTemplate.cs" />
     <Compile Include="Domain\IProcessAbsenceRequest.cs" />
     <Compile Include="Domain\IQueueStatisticsProvider.cs" />
+    <Compile Include="Domain\ISchedulePeriodTargetDayOffCalculator.cs" />
     <Compile Include="Domain\IScheduleResultDailyValueCalculator.cs" />
     <Compile Include="Domain\IRootPersonGroup.cs" />
     <Compile Include="Domain\IScheduleAuditTrailReportData.cs" />
