--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -835,10 +835,11 @@
     <Compile Include="MessageBroker\Events\IMessageBroker.cs" />
     <Compile Include="MessageBroker\Notification.cs" />
     <Compile Include="MessageBroker\Subscription.cs" />
-    <Compile Include="Messages\Denormalize\DenormalizeGroupingMessage.cs" />
-    <Compile Include="Messages\Denormalize\DenormalizePersonFinderMessage.cs" />
+    <Compile Include="Messages\Denormalize\GroupPageChangedMessage.cs" />
+    <Compile Include="Messages\Denormalize\PersonChangedMessage.cs" />
     <Compile Include="Messages\Denormalize\DenormalizeScheduleProjection.cs" />
     <Compile Include="Messages\Denormalize\InitialLoadScheduleProjection.cs" />
+    <Compile Include="Messages\Denormalize\PersonPeriodChangedMessage.cs" />
     <Compile Include="Messages\Denormalize\ProcessDenormalizeQueue.cs" />
     <Compile Include="Messages\General\ChildSkillSelection.cs" />
     <Compile Include="Messages\General\ExportMultisiteSkillsToSkill.cs" />
