--- a/.hgignore
+++ b/.hgignore
@@ -43,7 +43,7 @@ packages/
 *.vssscc
 *.vsps
 *log.txt
-*.config
+*.[Cc]onfig
 *.jrs
 *.esent
 *.chk
@@ -51,8 +51,6 @@ packages/
 *.ncov
 *Test.xml
 symbolmodule.xml
-Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.Config
-*[Tt]est.dll.[Cc]onfig
 *.ncov.bkp
 *.log.1
 *.sln
