--- a/Teleopti.Ccc.TestCommon/Teleopti.Ccc.TestCommon.csproj
+++ b/Teleopti.Ccc.TestCommon/Teleopti.Ccc.TestCommon.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Services\PersonRequestAuthorizationCheckerForTest.cs" />
     <Compile Include="Services\ShiftTradeRequestStatusCheckerForTestDoesNothing.cs" />
     <Compile Include="StateHolderProxyHelper.cs" />
+    <Compile Include="StubFactory.cs" />
     <Compile Include="TestData\Analytics\AQueue.cs" />
     <Compile Include="TestData\Analytics\AWorkload.cs" />
     <Compile Include="TestData\Analytics\BusinessUnit.cs" />
