--- a/.hgignore
+++ b/.hgignore
@@ -54,8 +54,6 @@ symbolmodule.xml
 Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.Config
 *[Tt]est.dll.[Cc]onfig
 *.ncov.bkp
-Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.WebService/RtaWebService.log.1
 *.sln
 Database/Tools/Restore/output
-Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/SdkWebService.log.1
-Logs/SdkWebService.log.1
+*.log.*
