--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.csproj
@@ -78,6 +78,12 @@
     </Compile>
     <Compile Include="Bindings\ColleagueStepDefinitions.cs" />
     <Compile Include="AbsenceRequestFromScheduleStepDefinitions.cs" />
+    <Compile Include="Data\User\AbsencePreferenceOnWeekday.cs" />
+    <Compile Include="Data\User\CommonScenario.cs" />
+    <Compile Include="Data\User\ContractScheduleFromTable.cs" />
+    <Compile Include="Data\User\DayOffPreferenceOnWeekday.cs" />
+    <Compile Include="Data\User\IContractScheduleSetup.cs" />
+    <Compile Include="Data\User\SecondScenario.cs" />
     <Compile Include="Data\DataFactory.cs" />
     <Compile Include="Data\User\CommonContract.cs" />
     <Compile Include="Data\User\ContractFromTable.cs" />
