Added class to test how to get possible combinations of starttime, endtime and shiftcategory in list of shifts

--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -295,6 +295,7 @@
     <Compile Include="ResourceCalculation\GroupScheduling\RuleSetBagForGroupPersonTest.cs" />
     <Compile Include="ResourceCalculation\LegalStateCheckerOptionsTest.cs" />
     <Compile Include="ResourceCalculation\OptimizerActivitiesPreferencesTest.cs" />
+    <Compile Include="ResourceCalculation\PossibleCombinationsOfStartEndCategoryCreatorTest.cs" />
     <Compile Include="ResourceCalculation\ResourceCalculateDaysDeciderTest.cs" />
     <Compile Include="ResourceCalculation\RuleSetDeletedActivityCheckerTest.cs" />
     <Compile Include="ResourceCalculation\RuleSetDeletedShiftCategoryCheckerTest.cs" />
