--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/packages.config
@@ -10,6 +10,7 @@
   <package id="jQuery.UI.Combined" version="1.8.16" />
   <package id="jQuery.Validation" version="1.8.1" />
   <package id="jQuery.vsdoc" version="1.6" />
+  <package id="knockoutjs" version="2.1.0" />
   <package id="LinFu.DynamicProxy.OfficialRelease" version="1.0.5" />
   <package id="log4net" version="2.0.0" />
   <package id="MbCache" version="1.3" />
