Added Quality Measure Dim and Fact load in ETL Config Tool.

--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.Transformer/Teleopti.Analytics.Etl.Transformer.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.Transformer/Teleopti.Analytics.Etl.Transformer.csproj
@@ -93,6 +93,8 @@
     <Compile Include="AbsenceTransformer.cs" />
     <Compile Include="ActivityTransformer.cs" />
     <Compile Include="ConfigurationHandler.cs" />
+    <Compile Include="Job\Steps\DimQualityQuestLoadJobStep.cs" />
+    <Compile Include="Job\Steps\FactQualityLoadJobStep.cs" />
     <Compile Include="Job\Steps\LicenseCheckJobStep.cs" />
     <Compile Include="Job\Steps\PurgeJobStep.cs" />
     <Compile Include="Job\Steps\FactRequestedDaysJobStep.cs" />
