Make debugging a bit more easy + switching to WebBroker as default MsgBroker

--- a/BuildArtifacts/AppRaptor.config
+++ b/BuildArtifacts/AppRaptor.config
@@ -70,7 +70,7 @@
     </behaviors>
     <client>
       <!--WISEMETA: address="[AGENT_SERVICE]"-->
-      <endpoint address="http://DummyHostname/TeleoptiCCC/SDK/TeleoptiCccSdkService.svc"
+      <endpoint address="http://localhost:1335/TeleoptiCccSdkService.svc"
       binding="basicHttpBinding"
                   contract="Teleopti.Ccc.Sdk.Common.Contracts.ITeleoptiCccSdkInternal"
                   bindingConfiguration="BasicHttpBinding_WithSession" behaviorConfiguration="EnableAuthentication">
