--- a/BuildArtifacts/SDKWeb.config
+++ b/BuildArtifacts/SDKWeb.config
@@ -69,10 +69,10 @@
       <!--WISEMETA: value="[CONTEXT_HELP_Suffix]"-->
       <add key="HelpSuffix" value=""/>
 		<!--WISEMETA: value="[MATRIX_WEB_SITE_URL]"-->
-		<add key="MatrixWebSiteUrl" value="http://DummyHostname/TeleoptiCCC/Analytics/"/>
+		<add key="MatrixWebSiteUrl" value="http://localhost:52500"/>
 		<add key="CustomerWebSSOUrl" value="http://customer.teleopti.com/elogin.aspx"/>
       <!--WISEMETA: value="[MESSAGE_BROKER_SDK]"-->
-		<add key="MessageBroker" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics;Application Name=Teleopti.Ccc.Sdk.Host"/>
+		<add key="MessageBroker" value="http://localhost:54903/"/>
       <add key="HelpUrlOnline" value="http://onlinehelp.teleopti.com/ccc/dev/"/>
       <add key="HelpPrefixOnline" value="f01:"/>
       <add key="HelpDividerOnline" value="+"/>
