--- a/BuildArtifacts/AppETLTool.config
+++ b/BuildArtifacts/AppETLTool.config
@@ -15,7 +15,7 @@
 		<!--WISEMETA: value="[SQL_AUTH_STRING];Application Name=Teleopti.Analytics.Etl.Tool;Initial Catalog=[DB_ANALYTICS]"-->
 		<add key="datamartConnectionString" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
 		<!--WISEMETA: value="[SQL_AUTH_STRING];Application Name=Teleopti.Analytics.Etl.Tool;Initial Catalog=[DB_ANALYTICS]"-->
-		<add key="MessageBroker" value="Data Source=.;Integrated Security=True;Initial Catalog=$(AnalyticsDB)"/>
+		<add key="MessageBroker" value="http://localhost:54903/"/>
 		<!--WISEMETA: value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=[AS_SERVER_NAME];Initial Catalog=[AS_DATABASE];Client Cache Size=25;Auto Synch Period=10000"-->
 		<add key="Cube" value="Provider=MSOLAP.3;Integrated Security=SSPI;Persist Security Info=True;Data Source=.;Initial Catalog=$(AnalyticsDB);Client Cache Size=25;Auto Synch Period=10000"/>
 		<add key="nhibConfPath" value="" />
