logging for web broker.

--- a/BuildArtifacts/BrokerWeb.config
+++ b/BuildArtifacts/BrokerWeb.config
@@ -35,4 +35,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="..\Logs\WebBroker.log" />
+      <rollingStyle value="Size" />
+        <maxSizeRollBackups value="10" />
+        <maximumFileSize value="500KB" />
+        <staticLogFileName value="true" />
+        <appendToFile value="true" />
+        <layout type="log4net.Layout.PatternLayout">
+          <param name="ConversionPattern" value="%d [%t] %-5p %c %m%n" />
+        </layout>
+    </appender>
+    <root>
+        <level value="WARN" />
+          <appender-ref ref="RollingLogFileAppender" />
+    </root>
+	</log4net>
 </configuration>
