--- a/BuildArtifacts/BrokerWeb.config
+++ b/BuildArtifacts/BrokerWeb.config
@@ -37,7 +37,7 @@
   </runtime>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="..\Logs\WebBroker.log" />
+      <file value="..\..\Logs\WebBroker.log" />
       <rollingStyle value="Size" />
         <maxSizeRollBackups value="10" />
         <maximumFileSize value="500KB" />
