Add missing config tag, Add EventLogAppender

--- a/BuildArtifacts/BrokerWeb.config
+++ b/BuildArtifacts/BrokerWeb.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
   <appSettings />
   <connectionStrings />
   <system.web>
@@ -36,6 +39,12 @@
     </assemblyBinding>
   </runtime>
   <log4net>
+    <appender name="EventAppender" type="log4net.Appender.EventLogAppender" >
+      <applicationName value="TeleoptiWebBroker" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="..\..\Logs\WebBroker.log" />
       <rollingStyle value="Size" />
@@ -48,8 +57,9 @@
         </layout>
     </appender>
     <root>
-        <level value="WARN" />
-          <appender-ref ref="RollingLogFileAppender" />
+      <level value="WARN" />
+      <appender-ref ref="EventAppender" />
+      <appender-ref ref="RollingLogFileAppender" />
     </root>
 	</log4net>
 </configuration>
