--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -905,7 +905,7 @@
     <Compile Include="Security\RegExpSpecificationTest.cs" />
     <Compile Include="Security\UserDetailTest.cs" />
     <Compile Include="SetUpFixtureForAssembly.cs" />
-    <Compile Include="ShiftCategoryPeriodValueExtractorThreadTest.cs" />
+    <Compile Include="ResourceCalculation\ShiftCategoryPeriodValueExtractorThreadTest.cs" />
     <Compile Include="Specification\AllTest.cs" />
     <Compile Include="Specification\SpecificationTest.cs" />
     <Compile Include="SystemSetting\GlobalSetting\CommonNameDescriptionSettingTest.cs" />
