--- a/DomainTest/Teleopti.Ccc.DomainTest.csproj
+++ b/DomainTest/Teleopti.Ccc.DomainTest.csproj
@@ -664,6 +664,7 @@
     <Compile Include="Scheduling\ShiftCategorySorterTest.cs" />
     <Compile Include="Scheduling\ShiftCreator\ActivityTimeLimiterTest.cs" />
     <Compile Include="Scheduling\SkillDayHelperTest.cs" />
+    <Compile Include="Scheduling\WorkShiftWorkTimeTest.cs" />
     <Compile Include="Scheduling\WorkTimeMinMaxCalculatorTest.cs" />
     <Compile Include="Scheduling\WorkTimeMinMaxTest.cs" />
     <Compile Include="Security\Authentication\ApplicationDataSourceProviderTest.cs" />
