--- a/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
+++ b/Teleopti.Messaging/Teleopti.Interfaces/Teleopti.Interfaces.csproj
@@ -533,6 +533,7 @@
     <Compile Include="Domain\IWorkShiftMinMaxCalculator.cs" />
     <Compile Include="Domain\IWorkShiftVisualLayerInfo.cs" />
     <Compile Include="Domain\IWorkShiftWeekMinMaxCalculator.cs" />
+    <Compile Include="Domain\IWorkShiftWorkTime.cs" />
     <Compile Include="Domain\IWorkTimeBackToLegalStateService.cs" />
     <Compile Include="Domain\IWorkTimeMinMax.cs" />
     <Compile Include="Domain\IPersonWriteProtectionInfo.cs" />
