Use ISO8601 week number for spanish and english (UK) as well.
--HG--
branch : Release 7.2.362

--- a/AgentPortal/Teleopti.Ccc.AgentPortal/Teleopti.Ccc.AgentPortal.csproj
+++ b/AgentPortal/Teleopti.Ccc.AgentPortal/Teleopti.Ccc.AgentPortal.csproj
@@ -542,7 +542,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Common\IDialogControl.cs" />
-    <Compile Include="Helper\DateHelper.cs" />
+    <Compile Include="Helper\Iso8601Helper.cs" />
     <Compile Include="Helper\GridHelper.cs" />
     <Compile Include="Helper\HelperFunctions.cs" />
     <Compile Include="Helper\MatrixAgent.cs" />
