#17673 Usability: Add activity length to tooltip in shift editor (Schedules and Intraday)

--- a/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
+++ b/Teleopti.Ccc.WinCodeTest/Teleopti.Ccc.WinCodeTest.csproj
@@ -328,6 +328,7 @@
     <Compile Include="Converters\DateTimeConverter\DateTimeParserTest.cs" />
     <Compile Include="Converters\DateTimeConverter\DateTimeToLocalConverterTest.cs" />
     <Compile Include="Converters\DateTimeConverter\DateTimeToLocalStringConverterTest.cs" />
+    <Compile Include="Converters\DateTimeConverter\TimeSpanToStringConverterTest.cs" />
     <Compile Include="Converters\DateTimeConverter\TimeSpanToDateTimeConverterTest.cs" />
     <Compile Include="Converters\ExtendDateTimePeriodConverterTest.cs" />
     <Compile Include="Converters\Layers\IsMoveAllLayersConverterTest.cs" />
