Fix MyTimeWeb MessageBroker config

--- a/BuildArtifacts/Web.Root.Web.config
+++ b/BuildArtifacts/Web.Root.Web.config
@@ -47,8 +47,8 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 		<!--WISEMETA: value="[NHIBCONFPATH]"-->
 		<add key="nhibConfPath" value="bin" />
-		<!--WISEMETA: value="[MESSAGE_BROKER_SDK]"-->
-        <add key="MessageBroker" value="Data Source=.;Integrated Security=True;Persist Security Info=False;Initial Catalog=TeleoptiAnalytics;Application Name=Teleopti.Ccc.Web"/>
+		<!--WISEMETA: value="[WEB_BROKER]"-->
+		<add key="MessageBroker" value="http://localhost:54903/"/>
 	</appSettings>
 
 	<system.web>
