target contract time display minutes

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -820,6 +820,7 @@
     <Compile Include="Security\Principal\TeleoptiPrincipal.cs" />
     <Compile Include="Security\Principal\TeleoptiPrincipalCacheable.cs" />
     <Compile Include="Security\Principal\UnsafePersonProvider.cs" />
+    <Compile Include="Security\Principal\UserCulture.cs" />
     <Compile Include="Security\RegExpSpecification.cs" />
     <Compile Include="Security\UserDetail.cs" />
     <Compile Include="Specification\All.cs" />
