tests for coverage

--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Foundation\ForeignKeyExceptionTest.cs" />
     <Compile Include="Foundation\RoleToPrincipalCommandTest.cs" />
     <Compile Include="Foundation\TeleoptiPrincipalCacheableFactoryTest.cs" />
+    <Compile Include="Foundation\TeleoptiPrincipalInternalsFactoryTest.cs" />
     <Compile Include="Foundation\WindowsAppDomainPrincipalContextTest.cs">
       <SubType>Code</SubType>
     </Compile>
